# zellij-ide

./: .gitignore  CLAUDE.md  COMMAND_PALETTE_ARCHITECTURE.md  Cargo.toml  DEPENDENCY_PRUNING_STRATEGY.md  DEVLOG.md  README.md
.cargo/: config.toml
docs/: 20250924_002024_architecture_plan.md  20250924_002024_devlog.md  20250924_002024_performance_recommendations.md  20250924_002024_pty_engine_plan.md  20250924_002024_pty_integration_plan.md  20250924_visual_enhancement_plan.md  20250924_zellij_fork_strategy.md  micro-editor-analysis.md
features/: README.md
features/editor/: commands.rs  mod.rs
gui-controls/: Cargo.toml
gui-controls/src/: lib.rs
src/: actor.rs  code_editor_actor.rs  command_palette.rs  config.rs  features.rs  gui_controls.rs  ide_state.rs  keybindings.rs  main.rs  panels.rs  scene_system.rs  scene_view.rs  terminal_actor.rs  terminal_ide.rs  tiling_system.rs  view.rs  view_system.rs  widgets.rs  window_manager.rs
