[package]
name = "zellij-ide"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"
# egui_code_editor 0.2.17 requires egui 0.32+, we'll implement our own simple editor

# Actor system and async
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# Data structures
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# For future LSP integration
tower-lsp = "0.20"
lsp-types = "0.95"

# Configuration
toml = "0.8"
dirs = "5.0"

# Syntax highlighting
syntect = "5.2"

# High-performance terminal support
vte = "0.13"
portable-pty = "0.8"
mio = "0.8"