[package]
name = "gui-controls"
version = "0.1.0"
edition = "2021"
description = "GUI control system for terminal IDE window management"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# For GUI rendering in terminal
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"